# CompetitiveProgramming

./: .gitignore  CMakeLists.txt  README.md
Lecture 1/: kadane.cpp  leaders.cpp  missingNumber.cpp  slidingWinMax.cpp
Lecture01/: README.md  description.md  kadane.cpp  leaders.cpp  missingNumber.cpp  missingNumberXOR.cpp  slidingWinMax.cpp  trappingWater.cpp
Lecture02/: README.md  description.md  findTeamMemebers.cpp  nextLargerElem.cpp  towers.cpp
Lecture03/: README.md  description.md  inversionCount.cpp  largestEvenNumber.cpp  mokeyBamboo.cpp
Lecture04/: BSTcheck.cpp  FiringEmployees.cpp  README.md  preorderBST.cpp  twoSpells.cpp  twoSpells2.cpp  twoSpells3.cpp  twoTypesSpells.cpp
Lecture05/: ABChocolate.cpp  README.md  frogMosquitoes.cpp  frogsMosquitoes.cpp  maxPathSum.cpp  numberOfWays.cpp
Lecture06/: README.md  kGood.cpp  maxPathSum.cpp
Lecture07/: README.md  ilyaQueries.cpp  littleGirl.cpp
Lecture09/: README.md  fenwick.cpp  updateArray.cpp
Lecture10/: README.md  nestedSegment.cpp  pashpar.cpp
Lecture11/: README.md  nestedSegment2.cpp
Lecture12/: README.md  crmq.cpp
Lecture14/: README.md  smallerValues.cpp  triplets.cpp
Lecture16/: README.md  powarray.cpp  treeandq.cpp
Lecture17/: Lcs.cpp  README.md  knapsack01.cpp
Lecture18/: README.md  minJumps.cpp
Lecture19/: README.ipynb  README.md  subset.cpp
Lecture2/: findTeamMemebers.cpp  nextLargerElem.cpp  towers.cpp
Lecture20/: README.md  lbs.cpp  lis.cpp
Lecture21/: README.md  editDistance.cpp  largestIndSet.cpp  palindSub.cpp  vertexCover.cpp  vertexcover2.cpp
testexam/: exam.cpp  (+5 more)
(+7 files in other folders)
