cmake_minimum_required(VERSION 3.14)
project(cpc)

set(CMAKE_CXX_STANDARD 14)

#add_executable(CompetitiveProgramming "Lecture 1/leaders.cpp")
#add_executable(CompetitiveProgramming "Lecture 1/kadane.cpp")
#add_executable(CompetitiveProgramming "Lecture 1/missingNumber.cpp" )
#add_executable(CompetitiveProgramming  "Lecture 1/trappingWater.cpp" )
#add_executable(CompetitiveProgramming "Lecture 1/slidingWinMax.cpp")
#add_executable(CompetitiveProgramming Lecture2/nextLargerElem.cpp)
#add_executable(CompetitiveProgramming Lecture2/towers.cpp)
add_executable(CompetitiveProgramming  Lecture2/findTeamMemebers.cpp)